crates/ty_python_semantic/resources/mdtest/snapshots/scoping.md_-_Scoping_rules_for_ty…_-_Type_parameter_defau…_-_Class_nested_in_func…_(21552085651676f7).snap
---
source: crates/ty_test/src/lib.rs
assertion_line: 624
expression: snapshot
---

---
mdtest name: scoping.md - Scoping rules for type variables - Type parameter defaults cannot reference outer-scope type parameters - Class nested in function
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/scoping.md
---

# Python source files

## mdtest_snippet.py

```
1 | def f[T]() -> None:
2 |     # error: [invalid-type-variable-default]
3 |     class C[U = T]: ...
```

# Diagnostics

```
error[invalid-type-variable-default]: Type parameter `U` cannot use type parameter `T` from an outer scope as its default
 --> src/mdtest_snippet.py:3:17
  |
1 | def f[T]() -> None:
2 |     # error: [invalid-type-variable-default]
3 |     class C[U = T]: ...
  |                 ^
  |
info: rule `invalid-type-variable-default` is enabled by default

```
