crates/ty_python_semantic/resources/mdtest/snapshots/scoping.md_-_Scoping_rules_for_ty…_-_Type_parameter_defau…_-_Deeply_nested_(e01ecc5a386bb8a1).snap
---
source: crates/ty_test/src/lib.rs
assertion_line: 624
expression: snapshot
---

---
mdtest name: scoping.md - Scoping rules for type variables - Type parameter defaults cannot reference outer-scope type parameters - Deeply nested
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/scoping.md
---

# Python source files

## mdtest_snippet.py

```
1 | class A[T]:
2 |     class B[U]:
3 |         # error: [invalid-type-variable-default]
4 |         class C[V = T]: ...
5 | 
6 |         # error: [invalid-type-variable-default]
7 |         class D[V = U]: ...
8 |         class E[V = int]: ...  # OK
```

# Diagnostics

```
error[invalid-type-variable-default]: Type parameter `V` cannot use type parameter `T` from an outer scope as its default
 --> src/mdtest_snippet.py:4:21
  |
2 |     class B[U]:
3 |         # error: [invalid-type-variable-default]
4 |         class C[V = T]: ...
  |                     ^
5 |
6 |         # error: [invalid-type-variable-default]
  |
info: rule `invalid-type-variable-default` is enabled by default

```

```
error[invalid-type-variable-default]: Type parameter `V` cannot use type parameter `U` from an outer scope as its default
 --> src/mdtest_snippet.py:7:21
  |
6 |         # error: [invalid-type-variable-default]
7 |         class D[V = U]: ...
  |                     ^
8 |         class E[V = int]: ...  # OK
  |
info: rule `invalid-type-variable-default` is enabled by default

```
