crates/ty_python_semantic/resources/mdtest/snapshots/scoping.md_-_Scoping_rules_for_ty…_-_Type_parameter_defau…_-_Nested_classes_(607b05aa34962630).snap
---
source: crates/ty_test/src/lib.rs
assertion_line: 624
expression: snapshot
---

---
mdtest name: scoping.md - Scoping rules for type variables - Type parameter defaults cannot reference outer-scope type parameters - Nested classes
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/scoping.md
---

# Python source files

## mdtest_snippet.py

```
1 | class Outer[T]:
2 |     # error: [invalid-type-variable-default]
3 |     class Inner1[U = T]: ...
4 | 
5 |     # error: [invalid-type-variable-default]
6 |     class Inner2[U = T | int]: ...
7 |     class Inner3[U = int]: ...  # OK: no outer type param in default
8 |     class Inner4[S, U = S]: ...  # OK: S is from the same scope
```

# Diagnostics

```
error[invalid-type-variable-default]: Type parameter `U` cannot use type parameter `T` from an outer scope as its default
 --> src/mdtest_snippet.py:3:22
  |
1 | class Outer[T]:
2 |     # error: [invalid-type-variable-default]
3 |     class Inner1[U = T]: ...
  |                      ^
4 |
5 |     # error: [invalid-type-variable-default]
  |
info: rule `invalid-type-variable-default` is enabled by default

```

```
error[invalid-type-variable-default]: Type parameter `U` cannot use type parameter `T` from an outer scope as its default
 --> src/mdtest_snippet.py:6:22
  |
5 |     # error: [invalid-type-variable-default]
6 |     class Inner2[U = T | int]: ...
  |                      ^^^^^^^
7 |     class Inner3[U = int]: ...  # OK: no outer type param in default
8 |     class Inner4[S, U = S]: ...  # OK: S is from the same scope
  |
info: rule `invalid-type-variable-default` is enabled by default

```
